[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47", features = [
    "debug",
] }

parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47", features = [
    "wasm-opt",
] }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
